add bootstrap design

--- a/app/views/layouts/_flash_tasks.html.erb
+++ b/app/views/layouts/_flash_tasks.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |task_code, task| %>
 
-  <div><%= task %></div>
+  <div class="alert alert-<%= task_code %>"><%= task %></div>
   
 <% end %>
