--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,20 @@
 <h1>id: <%= @task.id %>のタスク内容</h1>
 
-<p><%= @task.status %></p>
-<p><%= @task.content %></p>
+<table class="table table-bordered">
+    <tr>
+        <th>id</th>
+        <td><%= @task.id %></td>
+    </tr>
+    <tr>
+        <th>ステータス</th>
+        <td><%= @task.status %></td>
+    </tr>
+    <tr>
+        <th>タスク</th>
+        <td><%= @task.content %></td>
+    </tr>
+</table>
 
-<%= link_to 'タスク一覧に戻る', tasks_path %>
-<%= link_to 'タスクを変更する', edit_task_path %>
-<%= link_to 'タスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+
+<%= link_to 'タスクを変更する', edit_task_path(@task), class: 'btn btn-light' %>
+<%= link_to 'タスクを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
