--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,20 @@
-<h1>タスク一覧</h1>
-
+<% if logged_in? %>
+  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+　<h1>タスク一覧</h1>
 <% if @tasks.any? %>
+　<div class="row">
+    <aside class="col-sm-4">
+      <%= form_with(model: @task, local: true) do |f| %>
+        <div class="form-group">
+          <%= f.text_area :content, class: 'form-control', rows: 5 %>
+        </div>
+        <%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
+        <% end %>
+    </aside>
+    <div class="col-sm-8">
+      <%= render 'tasks/tasks', tasks: @tasks %>
+    </div>
+  </div>
   <table class="table table-striped">
       <thead>
           <tr>
@@ -22,7 +36,13 @@
   <div>
       <%= paginate @tasks %>
   </div>    
- <% end %>     
-
-
-<%= link_to '新規タスク作成', new_task_path, class: "btn btn-primary" %>
+ <% end %> 
+ <%= link_to '新規タスク作成', new_task_path, class: "btn btn-primary" %>
+<% else %>
+<div class="center jumbotron">
+    <div class="text-center">
+        <h1>Welcome to the Tasklist</h1>
+        <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
+<% end %>
