--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <% if logged_in? %>
-  <p>ログイン完了ユーザ: <%= current_user.name %></p>
+  <p>ログインユーザ: <%= current_user.name %></p>
 　<% if @tasks.any? %>
 　<h1>タスク一覧</h1>
 　  <table class="table table-striped">
